# mneme-ai

./: Cargo.toml  README.md
.github/workflows/: release.yml
prompts/: mneme-orchestrator.md
src/: agents.rs  cli.rs  doctor.rs  install.rs  lib.rs  main.rs  mneme.rs  opencode.rs  profile.rs  skills.rs  tui.rs  update.rs
tests/: agents_tests.rs  integration.rs
