[package]
name = "mneme-ai"
version = "0.1.0"
edition = "2021"
description = "mneme-ai — Ecosystem configurator for AI coding agents. Sets up agents with mneme persistent memory, SDD workflows, skills, and MCP."
license = "MIT"
repository = "https://github.com/daddydiaz2/mneme-ai"

[[bin]]
name = "mneme-ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[features]
default = []
network = ["dep:reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
